--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,12 +1,12 @@
 {
     "header": {
-        "route1": "Профиль",
-        "route2": "Руководство",
+        "route1": "Рабочая зона",
+        "route2": "Профиль",
+        "route3": "Руководство",
         "switchTheme": "Сменить тему",
         "optionInfo": "Для большей информации"
     },
     "login": {
-        "notFound": "404 Страница не найдена",
         "login": "Войти",
         "logout": "Выйти",
         "email": "Email",
@@ -14,6 +14,22 @@
         "logInfo": "У вас нет аккаунта ?",
         "signUp": "Зарегистрироваться",
         "logInfoGoogle": "Или войдите с Google аккаунта",
-        "confPass": "Подтвердить пароль"
+        "confPass": "Подтвердить пароль",
+        "role": "Отдел",
+        "name": "ФИО"
+    },
+    "other": {
+        "notFound": "404 Страница не найдена",
+        "selectRole": "Выберите ваш отдел",
+        "role1": "Работник на объекте",
+        "role2": "Химическая лаборатория",
+        "role3": "Отдел добычи",
+        "role4": "Отдел ООС"
+    },
+    "work": {
+        "selectObj": "Выберите производственный объект",
+        "obj1": "Газовые турбины компрессоров обратной закачки газа",
+        "obj2": "Газотурбинные электростанции",
+        "obj3": "Котлы высокого давления"
     }
 }
