--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,7 @@
 {
     "header": {
         "route1": "Рабочая зона",
-        "route2": "Профиль",
+        "route2": "Архив",
         "route3": "Руководство",
         "switchTheme": "Сменить тему",
         "optionInfo": "Для большей информации"
@@ -16,7 +16,8 @@
         "logInfoGoogle": "Или войдите с Google аккаунта",
         "confPass": "Подтвердить пароль",
         "role": "Отдел",
-        "name": "ФИО"
+        "name": "ФИО",
+        "secretKey": "Секретный ключ"
     },
     "other": {
         "notFound": "404 Страница не найдена",
@@ -29,7 +30,7 @@
     "work": {
         "selectObj": "Выберите производственный объект",
         "obj1": "Газовые турбины компрессоров обратной закачки газа",
-        "obj2": "Газотурбинные электростанции",
+        "obj2": "Газотурбинная электростанция",
         "obj3": "Котлы высокого давления"
     }
 }
