--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,7 +17,9 @@
         "confPass": "Подтвердить пароль",
         "role": "Отдел",
         "name": "ФИО",
-        "secretKey": "Секретный ключ"
+        "secretKey": "Секретный ключ",
+        "info1": "Отдел, в котором вы работаете",
+        "info2": "Секретный ключ компании, узнайте в администрации"
     },
     "other": {
         "notFound": "404 Страница не найдена",
