--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,17 +22,78 @@
         "info2": "Секретный ключ компании, узнайте в администрации"
     },
     "other": {
-        "notFound": "404 Страница не найдена",
+        "notFound": "404 Страница не найдена ヽ(°□° )ノ",
         "selectRole": "Выберите ваш отдел",
         "role1": "Работник на объекте",
         "role2": "Химическая лаборатория",
         "role3": "Отдел добычи",
-        "role4": "Отдел ООС"
+        "role4": "Отдел ООС",
+        "tablePlaceholder": "Введите значение"
     },
     "work": {
         "selectObj": "Выберите производственный объект",
-        "obj1": "Газовые турбины компрессоров обратной закачки газа",
+        "obj1": "Газовые турбины компрессоров обратной закачки газа (УКПГ-2)",
         "obj2": "Газотурбинная электростанция",
-        "obj3": "Котлы высокого давления"
+        "obj3": "Котлы высокого давления (КПК)",
+        "obj4": "Очищенный газ",
+        "button": "Отправить данные в отдел добычи",
+        "title1": "Вы успешно отправили данные в отдел добычи",
+        "title2": "Данные уже отправлены в отдел добычи",
+        "firstGroup": {
+            "name1": "Vпот",
+            "name1Info": "1000*м^3",
+            "name2": "Vзак",
+            "name2Info": "1000*м^3",
+            "name3": "t",
+            "name3Info": "часы",
+            "name4": "E",
+            "name4Info": "МВ*ч",
+            "name5": "Vпара",
+            "name5Info": "тонн",
+            "help1": "Объем потребления газа",
+            "help2": "Время работы",
+            "help3": "Выработанная электр.",
+            "help4": "Объем закачиваемого газа",
+            "help5": "Объем пара"
+        },
+        "secondGroup": {
+            "name1": "N",
+            "name2": "S",
+            "name3": "C",
+            "name4": "ρ",
+            "name5": "k эмис. CO2",
+            "name6": "k уд. CH4",
+            "name7": "k уд. N2O",
+            "name8": "Q",
+            "info1": "% масс",
+            "info2": "кг/м^3",
+            "info3": "тC/ТДж",
+            "info4": "ГДж/т",
+            "help1": "Содержание азота в газе",
+            "help2": "Содержание серы в газе",
+            "help3": "Содержание углерода",
+            "help4": "Плотность газа",
+            "help5": "Фактор эмиссии CO2",
+            "help6": "Удельный фактор CH4",
+            "help7": "Удельный фактор N2O",
+            "help8": "Низшая теплота сгорания"
+        },
+        "thirdGroup": {
+            "report": "Сводный отчет",
+            "title1": "Источники выбросов",
+            "title2": "Составы газов",
+            "type1": "Загрязняющие вещества",
+            "type2": "Парниковые газы",
+            "type3": "Энергоэффективность"
+        }
+    },
+    "validation": {
+        "number": "Должно быть числом",
+        "required": "Обязательное поле",
+        "email": "Неправильный email",
+        "maxLength": "Макс. длина - 50 символов",
+        "minLength": "Мин. длина - 5 символов",
+        "confPass": "Пароль не совпадает",
+        "role": "Вы должны выбрать роль"
     }
 }
