--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -84,7 +84,10 @@
             "title2": "Составы газов",
             "type1": "Загрязняющие вещества",
             "type2": "Парниковые газы",
-            "type3": "Энергоэффективность"
+            "type3": "Энергоэффективность",
+            "user": "Пользователь",
+            "date": "Дата",
+            "gasType": "Тип газа"
         }
     },
     "validation": {
