--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,11 +24,14 @@
     "other": {
         "notFound": "404 Страница не найдена ヽ(°□° )ノ",
         "selectRole": "Выберите ваш отдел",
-        "role1": "Работник на объекте",
-        "role2": "Химическая лаборатория",
-        "role3": "Отдел добычи",
-        "role4": "Отдел ООС",
-        "tablePlaceholder": "Введите значение"
+        "selectRoleConf": "Выберите ваш объект",
+        "role1": "Химическая лаборатория",
+        "role2": "Отдел добычи",
+        "role3": "Отдел ООС",
+        "tablePlaceholder": "Введите значение",
+        "modalInfo": "Вы уверены что хотите подтвердить отправку данных ?",
+        "modalConfirm": "Подтвердить",
+        "you": "Вы"
     },
     "work": {
         "selectObj": "Выберите производственный объект",
@@ -39,6 +42,8 @@
         "button": "Отправить данные в отдел добычи",
         "title1": "Вы успешно отправили данные в отдел добычи",
         "title2": "Данные уже отправлены в отдел добычи",
+        "title3": "Данные были отклонены отделом добычи",
+        "gostButton": "ГОСТ",
         "firstGroup": {
             "name1": "Vпот",
             "name1Info": "1000*м^3",
@@ -50,6 +55,9 @@
             "name4Info": "МВ*ч",
             "name5": "Vпара",
             "name5Info": "тонн",
+            "name6Info": "м^3",
+            "name7Info": "МВ",
+            "name6": "A",
             "help1": "Объем потребления газа",
             "help2": "Время работы",
             "help3": "Выработанная электр.",
@@ -85,9 +93,30 @@
             "type1": "Загрязняющие вещества",
             "type2": "Парниковые газы",
             "type3": "Энергоэффективность",
-            "user": "Пользователь",
+            "user": "Сотрудник",
             "date": "Дата",
-            "gasType": "Тип газа"
+            "gasType": "Тип газа",
+            "typeReason": "Напишите причину",
+            "reason": "Причина",
+            "reject": "Отклонить данные",
+            "edited": "Отредактировано",
+            "rejected": "Отклонено",
+            "signRep": "Подписать отчет",
+            "signRepInfo": "Вы уверены что хотите подписать отчет ?",
+            "signed": "Отчет подписан",
+            "signedTitle": "Подписан",
+            "inProgr": "В процессе"
+        },
+        "fourthGroup": {
+            "notSigned": "Отчет еще не подписан",
+            "title": "Финальный отчет",
+            "signedBy": "Подписал",
+            "formulas": "Формулы для вычислений",
+            "selectObj": "Выберите объект чтобы увидеть формулу",
+            "makeCalc": "Произвести расчет",
+            "confCalc": "Вы уверены, что хотите произвести расчеты ?",
+            "attention1": "Действие невозвратимо",
+            "attention2": "У вас есть несохраненные изменения в формулах"
         }
     },
     "validation": {
