--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -31,7 +31,8 @@
         "tablePlaceholder": "Введите значение",
         "modalInfo": "Вы уверены что хотите подтвердить отправку данных ?",
         "modalConfirm": "Подтвердить",
-        "you": "Вы"
+        "you": "Вы",
+        "none": "Нет"
     },
     "work": {
         "selectObj": "Выберите производственный объект",
@@ -116,7 +117,8 @@
             "makeCalc": "Произвести расчет",
             "confCalc": "Вы уверены, что хотите произвести расчеты ?",
             "attention1": "Действие невозвратимо",
-            "attention2": "У вас есть несохраненные изменения в формулах"
+            "attention2": "У вас есть несохраненные изменения в формулах",
+            "lastReport": "Последний отчет"
         }
     },
     "validation": {
