--- a/public/locales/kz/translation.json
+++ b/public/locales/kz/translation.json
@@ -118,7 +118,8 @@
             "confCalc": "Senimdisiz esepteý ?",
             "attention1": "Bul áreket qaıtymsyz",
             "attention2": "Formýlalarda saqtalmaǵan ózgerister bar",
-            "lastReport": "Sońǵy esep"
+            "lastReport": "Sońǵy esep",
+            "totalEmis": "Shyǵaryndylardyń jalpy kólemi"
         }
     },
     "validation": {
