--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -118,7 +118,8 @@
             "confCalc": "Вы уверены, что хотите произвести расчеты ?",
             "attention1": "Действие невозвратимо",
             "attention2": "У вас есть несохраненные изменения в формулах",
-            "lastReport": "Последний отчет"
+            "lastReport": "Последний отчет",
+            "totalEmis": "Всего выбросов"
         }
     },
     "validation": {
