--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -119,7 +119,8 @@
             "attention1": "Действие невозвратимо",
             "attention2": "У вас есть несохраненные изменения в формулах",
             "lastReport": "Последний отчет",
-            "totalEmis": "Всего выбросов"
+            "totalEmis": "Всего выбросов",
+            "noReports": "Eще не было подписано ни одного отчета"
         }
     },
     "validation": {
