--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -45,6 +45,8 @@
         "title2": "Данные уже отправлены в отдел добычи",
         "title3": "Данные были отклонены отделом добычи",
         "gostButton": "ГОСТ",
+        "modalInfo1": "Значения должны быть расположены в один ряд",
+        "modalInfo2": "В таком же порядке как и значения в представленной таблице",
         "firstGroup": {
             "name1": "Vпот",
             "name1Info": "1000*м^3",
@@ -63,7 +65,8 @@
             "help2": "Время работы",
             "help3": "Выработанная электр.",
             "help4": "Объем закачиваемого газа",
-            "help5": "Объем пара"
+            "help5": "Объем пара",
+            "help6": "Удельный расход топлива"
         },
         "secondGroup": {
             "name1": "N",
@@ -122,6 +125,18 @@
             "totalEmis": "Всего выбросов",
             "noReports": "Eще не было подписано ни одного отчета"
         }
+    },
+    "homepage": {
+        "obj1": "Компрессор",
+        "obj2": "Котел",
+        "obj3": "ГТЭС",
+        "option1": "Все отчеты",
+        "option2": "Последний отчет",
+        "moreStat": "Больше статистики",
+        "info": "Не понимаете как читать / использовать графики ?"
+    },
+    "archive": {
+        "noData": "Нет записей в архиве"
     },
     "validation": {
         "number": "Должно быть числом",
