--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,6 +16,7 @@
         "logInfoGoogle": "Или войдите с Google аккаунта",
         "confPass": "Подтвердить пароль",
         "role": "Отдел",
+        "phone": "Телефон",
         "name": "ФИО",
         "secretKey": "Секретный ключ",
         "info1": "Отдел, в котором вы работаете",
@@ -28,6 +29,7 @@
         "role1": "Химическая лаборатория",
         "role2": "Отдел добычи",
         "role3": "Отдел ООС",
+        "role4": "Администратор",
         "tablePlaceholder": "Введите значение",
         "modalInfo": "Вы уверены что хотите подтвердить отправку данных ?",
         "modalConfirm": "Подтвердить",
@@ -134,6 +136,10 @@
         "option2": "Последний отчет",
         "moreStat": "Больше статистики",
         "info": "Не понимаете как читать / использовать графики ?"
+    },
+    "cornerMenu": {
+        "edit": "Изменить",
+        "users": "Сотрудников"
     },
     "archive": {
         "noData": "Нет записей в архиве"
